[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/Shop/ShopInterface.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ShopInterface" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -60.0
margin_right = 50.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 140, 120 )

[node name="ShopName" type="Label" parent="Control/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 56.0
margin_bottom = 17.0
text = "Shop"

[node name="Scroll" type="ScrollContainer" parent="Control/Panel"]
margin_left = 5.0
margin_top = 25.0
margin_right = 37.0
margin_bottom = 89.0
rect_min_size = Vector2( 32, 64 )
rect_clip_content = false
scroll_horizontal_enabled = false

[node name="ItemList" type="VBoxContainer" parent="Control/Panel/Scroll"]

[node name="Exit" type="Button" parent="Control/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -17.0
margin_right = -4.0
margin_bottom = -4.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Sair"
align = 2

[connection signal="pressed" from="Control/Panel/Exit" to="." method="_on_Exit_pressed"]
